package BookStratagy;

public interface CoverBehaviour {
    String cover();
}
