package BookStratagy;

public class ThrillerBook extends Book {
        @Override
        public String display() {
            return "You Chose a Thriller Book";
        }
}
