package BookStratagy;

public class HorrorBook extends Book {
    @Override
    public String display() {
        return "You Chose A Horror Book";
    }
}
