package BookStratagy;

public class SoftCover implements CoverBehaviour{
    @Override
    public String cover() {
        return "a Soft Cover";
    }
}
